# job-app-ms

./: CMakeLists.txt  README.md
include/: application.hpp  cli.hpp  manager.hpp
src/: application.cpp  cli.cpp  main.cpp  manager.cpp
